# obs-captions-plugin

./: .gitmodules  CMakeLists.txt
CI/http/: clone_plibsys.sh  osx_install_script.sh
lib/caption_stream/: CMakeLists.txt  CaptionResult.h  ContinuousCaptions.cpp  ContinuousCaptions.h  ThreadsaferCallback.h  utils.h
lib/caption_stream/speech_apis/google_http_older/: CMakeLists.txt  CaptionStream.cpp  CaptionStream.h  TcpConnection.cpp  TcpConnection.h  ip_utils.c  log.h
lib/caption_stream/speech_apis/grpc_speech_api/: CMakeLists.txt  CaptionStream.cpp  CaptionStream.h
lib/caption_stream/speech_apis/grpc_speech_api/certs/: roots.h
src/: CaptionPluginManager.cpp  CaptionPluginManager.h  CaptionPluginSettings.h  CaptionResultHandler.cpp  CaptionResultHandler.h  OutputAudioCaptureSession.cpp  OutputAudioCaptureSession.h  SourceAudioCaptureSession.cpp  SourceAudioCaptureSession.h  SourceCaptioner.cpp  SourceCaptioner.h  WordReplacer.h  caption_output_writer.h  caption_stream_helper.cpp  caption_transcript_writer.h  data.h  google_s2t_caption_plugin.cpp  storage_utils.h  stringutils.h
src/ui/: CaptionSettingsWidget.h  CaptionSettingsWidget.ui  MainCaptionWidget.cpp  MainCaptionWidget.h  MainCaptionWidget.ui  OpenCaptionSettingsWidget.h  OpenCaptionSettingsWidget.ui  ui_CaptionSettingsWidget.h  ui_MainCaptionWidget.h  ui_OpenCaptionSettingsWidget.h  uiutils.h
